--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Description sample">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Damian Zalewski">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -40,17 +41,17 @@
                 <div class="keyItem">
                     <i class="fas fa-lock"></i>
                     <h1>SECURE DATA</h1>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Modi expedita hic molestiae</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Modi expedita hic molestiae</p>
                 </div>
                 <div class="keyItem">
                     <i class="fas fa-network-wired"></i>
                     <h1>NETWORK WORKFLOW</h1>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Modi expedita hic molestiae</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Modi expedita hic molestiae</p>
                 </div>
                 <div class="keyItem">
                     <i class="fas fa-medal"></i>
                     <h1>TOP RATING PRODUCT</h1>
-                    <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Modi expedita hic molestiae</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Modi expedita hic molestiae</p>
                 </div>
             </article>
         </section>
